fix: activies overflow

--- a/css/sections/_activities.css
+++ b/css/sections/_activities.css
@@ -11,6 +11,9 @@
 
         gap: 30px;
         padding: 30px;
+
+        max-width: 100%;
+        overflow: scroll;
     }
 
     .activities .activities-cards
